tests/errors/erro_sintatico_malformed_decl.lua
function void main()
    -- Declaração mal formada: falta a expressão após o '='
    local x : integer = ; 
end
